Added email icon

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 align="center"
                 style="padding: 5px 5px 5px 5px;"
               >
-
+                <a href="#"><img src="assets/images/mail.png" alt=""></a>
               </div>
             </div>
           </div>
