--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a data-scroll class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="#">Resume</a>
+              <a class="nav-link" href="assets/docs/Ram-Sudeep-Kalugotla.pdf" target="_blank">Resume</a>
             </li>
           </ul>
         </div>
