--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         >
           <p>
             Since my childhood, I am always attracted towards Computers and
-            Electronics. My curiosity on harware components were programmed
-            drived me towards my Bachelors in Electronics and Communication at
+            Electronics. My curiosity on hardware components were programmed
+            drove me towards my Bachelors in Electronics and Communication at
             <span style="font-weight: bold;"
               >V R Siddhartha Engineering College</span
             >
