--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a data-scroll class="nav-link" href="#about"
+              <a data-toggle="collapse" data-target=".navbar-collapse.show" data-scroll class="nav-link" href="#about"
                 >About<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="#skills">Skills</a>
+              <a data-toggle="collapse" data-target=".navbar-collapse.show" data-scroll class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="#experience">Experience</a>
+              <a data-toggle="collapse" data-target=".navbar-collapse.show" data-scroll class="nav-link" href="#experience">Experience</a>
             </li>
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="#projects">Projects</a>
+              <a data-toggle="collapse" data-target=".navbar-collapse.show" data-scroll class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="#contact">Contact</a>
+              <a data-toggle="collapse" data-target=".navbar-collapse.show" data-scroll class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="assets/docs/Ram-Sudeep-Kalugotla.pdf" target="_blank">Resume</a>
@@ -93,7 +93,7 @@
       <br />
       <div class="typeWriter">
         <h1>Ram Sudeep K</h1>
-        <h2>Web Developer</h2>
+        <h2>Web Developer and Integrator</h2>
       </div>
       <br />
       <br />
@@ -117,7 +117,7 @@
       <br />
       <div class="row aboutText">
         <div
-          class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+          class="col-lg-12 col-md-12 col-sm-12 col-xs-12 Mobiletext"
           style="padding: 0 50px 50px 50px; text-align: center;"
         >
           <p>
@@ -148,34 +148,6 @@
             programming.
           </p>
         </div>
-        <!--Carousel-->
-        <!-- <div class="col-lg-4 col-md-6 col-xs-12" style="padding: 0 50px 50px 50px;">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img id="image1" class="d-block w-100" src="assets/images/Ram_1.jpg" alt="First slide"
-                                width="250px" height="350px">
-                        </div>
-                        <div class="carousel-item">
-                            <img id="image1" class="d-block w-100" src="assets/images/Ram_2.jpg" alt="Second slide"
-                                width="250px" height="350px">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div> -->
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div>
@@ -277,6 +249,37 @@
       <div class="skillSet" align="center" id="#skillSet">
         <div class="row">
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <p>MERN Stack</p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <img src="assets/images/skills/react.png" alt="React" />
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <img src="assets/images/skills/nodejs.png" alt="Node JS" />
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <img src="assets/images/skills/mongodb.png" alt="Mongo DB" />
+          </div>
+
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <p>ETL</p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <img class="Boomi" src="assets/images/skills/boomi.svg" alt="Boomi" />
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer"></div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer"></div>
+
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <p>ERP</p>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
+            <img class="NetSuite" src="assets/images/skills/netsuite.png" alt="NetSuite" />
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer"></div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer"></div>
+
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
             <p>Programming Languages</p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
@@ -286,19 +289,6 @@
             <img src="assets/images/skills/python.png" alt="Python" />
           </div>
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer"></div>
-
-          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
-            <p>MEAN Stack</p>
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
-            <img src="assets/images/skills/angular.png" alt="Angular 7" />
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
-            <img src="assets/images/skills/nodejs.png" alt="Node JS" />
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
-            <img src="assets/images/skills/mongodb.png" alt="Mongo DB" />
-          </div>
 
           <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 skillContainer">
             <p>Front End</p>
@@ -344,6 +334,51 @@
       <div class="row expRow">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <img
+            src="assets/images/cwd.png"
+            class="CWD"
+            width="250px"
+            height="200px"
+          />
+        </div>
+
+        <div
+          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12 Mobiletext"
+          style="padding: 0 50px 50px 50px;"
+        >
+          <h3 class="expImgTitle">
+            <b style="color: darkblue;"> Circus World Displays</b>
+            <i> (April 2019 - Current) </i>
+          </h3>
+          <h3 class="ExpPosTitle">
+            Web Developer Assistant <small><i>(Contract)</i></small>
+          </h3>
+          <h4>
+            <p style="font-size: 18px; text-align: justify;">
+              (Development and Maintenance of in-house e-commerce websites and integrations of a Consumer Electronics company)
+            </p>
+          </h4>
+          <ul class="ExpParaText" style="text-align: justify;">
+            <li>
+              Working in a team of six members on managing change requests and bug fixes of the websites using Magento e-commerce platform, PHP and full-stack web development
+            </li>
+            <li>
+              Planning and executing company-wide integration systems between NetSuite and marketplaces such as Amazon and Magento with Dell Boomi by exposing SOAP web-services and testing with SOAP UI
+            </li>
+            <li>
+              Managing sprint reviews with Atlassian tools such as JIRA and Confluence and maintaining code repositories and version control using SourceTree, Bitbucket and Beanstalk
+            </li>
+            <li>
+              Worked on the Mobile-Optimizations of the brand websites for better UI and UX
+            </li>
+            <li>
+              Developed custom Suitelet forms and Client and User Scripts in SuiteScript (NetSuite) for managing the integrations which takes care of all the transactional and inventory data
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row expRow">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <img
             src="assets/images/tcs.jpg"
             class="TCS"
             width="250px"
@@ -352,7 +387,7 @@
         </div>
 
         <div
-          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12"
+          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12 Mobiletext"
           style="padding: 0 50px 50px 50px;"
         >
           <h3 class="expImgTitle">
@@ -401,19 +436,62 @@
     >
       <h1 style="text-align: center; font-weight: bold;">Projects</h1>
       <br />
-
       <div class="row projectRow">
-        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 Projects">
           <img
-            src="assets/images/uwindsor.png"
-            class="uwindsor"
+            src="assets/images/budgeting-app.png"
             width="280px"
             height="200px"
           />
         </div>
 
         <div
-          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12"
+          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12 Mobiletext"
+          style="padding: 0 50px 50px 50px;"
+        >
+          <h3 class="expImgTitle">
+            <b style="color: darkblue;"
+              >Budgeting App</b
+            >
+            <i> (February 2020 - March 2020) </i>
+          </h3>
+          <h3 class="ExpPosTitle">
+            Side Project <small><i>(Full-Time)</i></small>
+          </h3>
+          <h4>
+            <p style="font-size: 18px; text-align: justify;">
+              (A React based minimalist website to track personal budgets)
+            </p>
+            <p style="font-size: 18px; text-align: justify;">
+              <a href="https://rsk-budgeting-app.firebaseapp.com/" target="_blank">Budgeting App Link</a>
+            </p>
+          </h4>
+          <ul class="ExpParaText" style="text-align: justify;">
+            <li>
+              A simple money tracking app to track income and expenses through 
+              interactive pie charts
+            </li>
+            <li>
+              Filter all the income and expenses according to the month and year
+            </li>
+            <li>
+              Added firebase authentication and database functionality for quick store and retrieve of the data 
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row projectRow">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 Projects">
+          <img
+            src="assets/images/uwindsor.png"
+            width="280px"
+            height="200px"
+          />
+        </div>
+
+        <div
+          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12 Mobiletext"
           style="padding: 0 50px 50px 50px;"
         >
           <h3 class="expImgTitle">
@@ -446,17 +524,16 @@
       </div>
 
       <div class="row projectRow">
-        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 Projects">
           <img
             src="assets/images/vrsec.png"
-            class="vrsec"
             width="200px"
             height="200px"
           />
         </div>
 
         <div
-          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12"
+          class="ExpText col-lg-9 col-md-8 col-sm-6 col-xs-12 Mobiletext"
           style="padding: 0 50px 50px 50px;"
         >
           <h3 class="expImgTitle">
@@ -503,7 +580,7 @@
                 align="center"
                 style="padding: 5px 5px 5px 5px;"
               > 
-                <a href="http://www.linkedin.com/in/ramsudeep-k"><img src="assets/images/linkedin.png" alt="Linkedin Link"></a>
+                <a href="http://www.linkedin.com/in/ramsudeep-k" target="_blank"><img src="assets/images/linkedin.png" alt="Linkedin Link"></a>
               </div>
 
               <div
@@ -511,7 +588,7 @@
                 align="center"
                 style="padding: 5px 5px 5px 5px;"
               >
-                <a href="https://www.github.com/kalugot"><img src="assets/images/github.png" alt="Github Link"></a>
+                <a href="https://www.github.com/kalugot" target="_blank"><img src="assets/images/github.png" alt="Github Link"></a>
               </div>
 
               <div
@@ -537,6 +614,13 @@
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
                 Ram Sudeep Kalugotla <span style="font-weight: bold;">©</span>2019
               </a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mr-2">
+            <li class="nav-item">
+              <p class="nav-link disabled"aria-disabled="true">
+                Icons used from <span><a href="https://icons8.com/" target="_blank">Icons8</a></span>
+              </p>
             </li>
           </ul>
         
