--- a/index.html
+++ b/index.html
@@ -438,11 +438,13 @@
       <br />
       <div class="row projectRow">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 Projects">
+          <a href="https://rsk-budgeting-app.firebaseapp.com/" target="_blank">
           <img
             src="assets/images/budgeting-app.png"
             width="280px"
             height="200px"
           />
+        </a>
         </div>
 
         <div
